<resources>
    <string name="app_name">FavoritePlaces</string>
    <string name="add_button">addButton</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="no_favorite_places_found_yet">No Favorite Places Found Yet! Add one from the button.</string>
    <string name="image_content_description">image</string>
    <string name="update">UPDATE</string>
    
    <string name="google_maps_api_key">AIzaSyA6zm_gle7a3Ly8KNmmJstsQ7nNM933twY</string>
</resources>